# 2v2-Soccer

./: CMakeLists.txt  FastPlayer.cpp  FastPlayer.h  Field.cpp  Field.h  Player.cpp  Player.h  PlayerSymbols.h  README.md  SoccerGame.cpp  SoccerGame.h  StrikerPlayer.cpp  StrikerPlayer.h  UserInput.cpp  UserInput.h  main.cpp
